-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.6.1
-
-
36098d436 (dev), 052cf0333 (6.7)
When the main level widget is set with fixed size and then maximized in weston compositor the application crashes with an error message:
xdg_wm_base@3: error 4: xdg_surface geometry (646 x 513) does not match the configured maximized state (640 x 480)
The Wayland connection experienced a fatal error: Protocol error
To reproduce the issue, please run the attached example in weston compositor and then maximase the client window.
- is duplicated by
-
QTBUG-119234 [Boot2Qt][Wayland] The app exits abnormally (255) when maximizing the dialog in widgets app
-
- Closed
-
- relates to
-
QTBUG-124351 [Boot2Qt][Wayland] The widgets camera app crashes when taking the picture in the full screen
-
- Closed
-
- resulted in
-
QTBUG-121399 tst_QWizard::task177022_setFixedSize() failed on Wayland
-
- Closed
-
-
QTBUG-121445 [REG 6.6 -> 6.7] Top-level QWidget minimum/maximum size API promise is broken on Wayland
-
- Closed
-
| For Gerrit Dashboard: QTBUG-120035 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 524982,8 | client: Do not constrain clients to size hints | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 527831,2 | client: Do not constrain clients to size hints | 6.7 | qt/qtwayland | Status: MERGED | +2 | 0 |